# ufsc

./: README.md
EEL5101/Trabalho Final/: Acionador.vhd  ButtonSync.vhd  Comparador.vhd  ContaDezena.vhd  ContaHora.vhd  ContaSeg.vhd  ContaUnidade.vhd  Contador.vhd  Controle.vhd  Datapath.vhd  Mux12x3.vhd  Reg.vhd  Relogio.vhd  TESTE completo.txt  decod.vhd
EEL7123/LAB1a/: traditionalSystem_BinToRNS.vhd
EEL7123/LAB1b/: Decod7seg.vhd  topo.vhd  traditionalSystem_BinToRNS.vhd
EEL7123/LAB2a/: Adder_2_2n.vhd  Adder_2_n_neg1.vhd  Adder_2_n_pos1.vhd  D_NFF.vhd  Decod7seg.vhd  topo.vhd
EEL7123/LAB2b/: Adder_mod_m.vhd  CPA.vhd  CSA.vhd  MUX21.vhd  fulladder.vhd  topo.vhd
EEL7123/LAB3a/: Multiplier_2_2n.vhd  Multiplier_2_n_neg1.vhd  Multiplier_2_n_pos1.vhd  (+5 more)
INE5409/: ch2_aprox_funcoes.py  ch3_sistemas_lineares.py  ch4_sistemas_nao_lineares.py  ch5_interpolacao.py  ch7_ajuste_curvas.py  ch8_integracao.py
INE5413/: graph.py
INE5415/: README.md
INE5416/: README.md
INE5417/: README.md
INE5419/: README.md
INE5420/: .gitignore  README.md  pyproject.toml
INE5420/sgi/: __main__.py  clipping.py  curve_utils.py  data2d.py  graphics.py  transforms.py
INE5420/sgi/_test/: test_polygons.txt
INE5420/sgi/app/: main_window.py  obj_handler.py  sub_window.py
INE5421/: AF.py  GLC.py  Main.py  README.md  Tree.py  exemplo.txt  miniteste10.py
INE5422/: README.md
INE5429/primes/: .gitignore  README.md  exercise.py  primes_results.csv  pyproject.toml  random_results.csv
INE5429/primes/primes/: primes.py  randgen.py
INE5430/: Prova2_20171_IA.txt
INE5431/: README.md
(+1116 files in other folders)
